# pladder

./: .gitignore  README.md  check.sh  full_check.sh  pladder-bot.service  pladder-irc.service  pladder-irc@.service  pladder-log.service  pladder-mumble@.service  pladder-upgrade.service  pladder-web.service  requirements.txt  setup.cfg  setup.py  setup_and_activate_venv.sh  upgrade.sh
pladder/: __init__.py  alias.py  azure.py  bah.py  bjbot.py  bjukkify.py  bot.py  cli.py  dbus.py  fuse.py  irc.py  log.py  misc.py  name.py  pladdble.py  plugin.py  script.py  snusk.py  test_alias.py  test_bjukkify.py  test_misc.py  test_script_evaluator.py  test_script_parser.py  threading.py  ttd.py  upgrade.py
pladder/config/: mumble.json
pladder/irc/: __main__.py  client.py  color.py  dbus.py  main.py  message.py  systemd.py  test_message.py
pladder/mumble/: __main__.py  client.py  dbus.py  main.py  systemd.py
pladder/plugins/: alias.py  azure.py  bjbot.py  builtin.py  connector.py  misc.py  pladdble.py  rest.py  snusk.py  test_alias.py  test_bjukkify.py  test_misc.py  userdef.py  web.py
pladder/script/: interpreter.py  parser.py  test_interpreter.py  test_parser.py  types.py
pladder/systemd/: main.py  pladder-irc@.service  pladder-mumble@.service  pladder-upgrade.service  pladder-web.service
pladder/upgrade/: api.py  config.py  main.py
pladder/web/: api.py  dbus.py  hub.py  main.py  tokens.py  types.py
