[metadata]
name = pladder
version = 1.0.0
author = Rasmus Bondesson and the contributors
author_email = raek@raek.se
description = An IRC bot
url = https://github.com/raek/pladder
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
packages = find:
python_requires = >=3.7
install_requires =
    requests>=2      # azure and rest plugins
    pydbus>=0.6.0    # connectors and bot (requires python3-gi apt package at runtime)
    pymumble>=1.6.1  # mumble connector (requires libopus0 apt package at runtime)
    flask            # upgrade service and web connector
    gunicorn         # upgrade service and web connector

[options.extras_require]
test =
    mypy
    flake8
    pytest
systemd =
    systemd-python   # connectors and bot (requires libsystemd-dev at install time)

[options.entry_points]
console_scripts =
    pladder-bot    = pladder.bot:main
    pladder-cli    = pladder.cli:main
    pladder-irc    = pladder.irc.main:main
    pladder-mumble = pladder.mumble.main:main [mumble]

[flake8]
max_line_length = 120

[mypy]
warn_unused_configs = True
warn_redundant_casts = True

[mypy-pladder.script.types]
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_unused_ignores = True
warn_return_any = True
implicit_reexport = False
strict_equality = True

[mypy-pladder.script.parser]
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_unused_ignores = True
warn_return_any = True
implicit_reexport = False
strict_equality = True

[mypy-pladder.script.interpreter]
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_unused_ignores = True
warn_return_any = True
implicit_reexport = False
strict_equality = True

[mypy-pladder.plugins.alias]
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_unused_ignores = True
warn_return_any = True
implicit_reexport = False
strict_equality = True

[mypy-pladder.plugins.userdef]
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_unused_ignores = True
warn_return_any = True
implicit_reexport = False
strict_equality = True
